# lttng-tools

./: .gitignore  ChangeLog  configure.ac
doc/man/: lttng-create.1.txt  lttng-enable-event.1.txt  lttng-load.1.txt  lttng-relayd.8.txt
extras/: Makefile.am  lttng-bash_completion
extras/templates/: Makefile.am
extras/templates/events/: Makefile.am  lttng_analysis_block.lttng  lttng_analysis_cpu.lttng  lttng_analysis_memory.lttng  lttng_analysis_network.lttng  lttng_interrupt.lttng  lttng_sched_latency.lttng  lttng_syscall.lttng  memory_check.lttng
extras/templates/session/: Makefile.am  discard_interrupt.lttng  discard_memory.lttng  discard_sched_latency.lttng  live_block.lttng  live_interrupt.lttng  live_memory.lttng  live_network.lttng  live_sched_latency.lttng  live_syscall.lttng  normal_block.lttng  normal_cpu.lttng  normal_lttng_analyses.lttng  normal_network.lttng  normal_syscall.lttng  snapshot_block.lttng  snapshot_cpu.lttng  snapshot_interrupt.lttng  snapshot_lttng_analyses.lttng  snapshot_memory.lttng  snapshot_network.lttng  snapshot_sched_latency.lttng  snapshot_syscall.lttng
include/: Makefile.am
include/lttng/: event-expr-internal.h  event-field-value.h  kernel-probe-internal.h  load.h  log-level-rule-internal.h  lttng-error.h  lttng.h  map-key-internal.h  session.h  userspace-probe-internal.h
include/lttng/action/: action-internal.h  incr-value-internal.h  incr-value.h  rate-policy-internal.h
include/lttng/condition/: condition-internal.h  event-rule-internal.h  event-rule.h
include/lttng/event-rule/: event-rule-internal.h
include/lttng/map/: map-internal.h  map.h
include/lttng/trigger/: trigger-internal.h
src/common/: Makefile.am  defaults.h  error.c  error.h  event-expr-to-bytecode.c  kernel-probe.c  log-level-rule.c  lttng-kernel.h  map.c  mi-lttng-3.0.xsd  mi-lttng-4.0.xsd  mi-lttng.c  mi-lttng.h  mi_lttng.xsd  pipe.c  runas.c  time.c  time.h  trigger.c  unix.c  userspace-probe.c  utils.c  utils.h
src/common/actions/: action.c  incr-value.c  list.c  notify.c  rate-policy.c  rotate-session.c  snapshot-session.c  start-session.c  stop-session.c
src/common/bytecode/: bytecode.c
src/common/compat/: tid.h
src/common/conditions/: buffer-usage.c  condition.c  event-rule-matches.c  event-rule.c  session-consumed-size.c  session-rotation.c
src/common/config/: config-session-abi.h  config.c  session-config.c  session-config.h  session.xsd
src/common/consumer/: consumer-metadata-cache.c  consumer-stream.c  consumer-stream.h  consumer-timer.c  consumer-timer.h  consumer.c  consumer.h
src/common/event-expr/: event-expr.c
src/common/event-rule/: event-rule.c  jul-logging.c  kernel-kprobe.c  kernel-syscall.c  kernel-tracepoint.c  kernel-uprobe.c  log4j-logging.c  python-logging.c  user-tracepoint.c
src/common/fd-tracker/: fd-tracker.c  inode.c
src/common/hashtable/: hashtable.c
src/common/health/: health.c
src/common/index/: index.c
src/common/kernel-consumer/: kernel-consumer.c
src/common/kernel-ctl/: kernel-ioctl.h
src/common/map-key/: map-key.c
src/common/relayd/: relayd.c  relayd.h
src/common/sessiond-comm/: inet.c  inet.h  inet6.c  inet6.h  relayd.h  sessiond-comm.h
src/common/ust-consumer/: ust-consumer.c  ust-consumer.h
src/lib/lttng-ctl/: load.c  lttng-ctl.c
tests/: Makefile.am
tests/regression/: Makefile.am
tests/regression/tools/: Makefile.am
tests/regression/tools/base-path/: test_ust
tests/regression/tools/clear/: test_ust
tests/regression/tools/exclusion/: test_exclusion
tests/regression/tools/filtering/: test_invalid_filter  test_valid_filter
tests/regression/tools/live/: Makefile.am  live_test.c
tests/regression/tools/map/: test_map
tests/regression/tools/mi/: test_mi
tests/regression/tools/notification/: base_client.c  consumer_testpoints.c  notification.c  test_notification_multi_app  test_notification_notifier_discarded_count  test_notification_ust  test_notification_ust_event_rule_condition_exclusion
tests/regression/tools/relayd-grouping/: test_kernel  test_ust
tests/regression/tools/rotation/: rotate_utils.sh  test_ust
tests/regression/ust/: Makefile.am
tests/regression/ust/java-log4j/: Makefile.am  test_java_log4j
tests/unit/: Makefile.am  test_action.c  test_event_expr_to_bytecode.c  test_map.c  test_notification.c  test_ust_data.c
tests/utils/: Makefile.am  utils.sh
tests/utils/testapp/gen-ust-events/: gen-ust-events.c
tests/utils/xml-utils/: pretty_xml.c
version/: extra_version_description
version/extra_patches/: Bound-maximum-data-read-to-RECV_DATA_BUFFER_SIZE-per.patch  relayd-do-not-prioritize-control-events-over-data.patch  relayd-split-control-and-data-connections-handling-i.patch
(+13 files in other folders)
