templatedir = $(datadir)/xml/lttng/template/events
dist_template_DATA = lttng_analysis_block.lttng lttng_analysis_cpu.lttng lttng_analysis_memory.lttng lttng_analysis_network.lttng lttng_interrupt.lttng lttng_sched_latency.lttng lttng_syscall.lttng memory_check.lttng
EXTRA_DIST = lttng_analysis_block.lttng lttng_analysis_cpu.lttng lttng_analysis_memory.lttng lttng_analysis_network.lttng lttng_interrupt.lttng lttng_sched_latency.lttng lttng_syscall.lttng memory_check.lttng
