templatedir = $(datadir)/xml/lttng/template/session

dist_template_DATA = normal_block.lttng live_block.lttng snapshot_block.lttng \
		     normal_cpu.lttng live_cpu.lttng snapshot_cpu.lttng normal_memory.lttng \
		     live_memory.lttng snapshot_memory.lttng normal_network.lttng live_network.lttng \
		     snapshot_network.lttng normal_interrupt.lttng live_interrupt.lttng \
		     snapshot_interrupt.lttng normal_sched_latency.lttng live_sched_latency.lttng \
		     snapshot_sched_latency.lttng normal_syscall.lttng live_syscall.lttng \
		     snapshot_syscall.lttng normal_lttng_analyses.lttng snapshot_lttng_analyses.lttng

EXTRA_DIST = normal_block.lttng live_block.lttng snapshot_block.lttng \
	     normal_cpu.lttng live_cpu.lttng snapshot_cpu.lttng normal_memory.lttng \
	     live_memory.lttng snapshot_memory.lttng normal_network.lttng live_network.lttng \
	     snapshot_network.lttng normal_interrupt.lttng live_interrupt.lttng \
	     snapshot_interrupt.lttng normal_sched_latency.lttng live_sched_latency.lttng \
	     snapshot_sched_latency.lttng normal_syscall.lttng live_syscall.lttng \
	     snapshot_syscall.lttng normal_lttng_analyses.lttng
