templatedir = $(datadir)/xml/lttng/template/session

dist_template_DATA = discard_block.lttng live_block.lttng snapshot_block.lttng \
		     discard_cpu.lttng live_cpu.lttng snapshot_cpu.lttng discard_memory.lttng \
		     live_memory.lttng snapshot_memory.lttng discard_network.lttng live_network.lttng \
		     snapshot_network.lttng discard_interrupt.lttng live_interrupt.lttng \
		     snapshot_interrupt.lttng discard_sched_latency.lttng live_sched_latency.lttng \
		     snapshot_sched_latency.lttng discard_syscall.lttng live_syscall.lttng \
		     snapshot_syscall.lttng discard_lttng_analyses.lttng snapshot_lttng_analyses.lttng

EXTRA_DIST = discard_block.lttng live_block.lttng snapshot_block.lttng \
	     discard_cpu.lttng live_cpu.lttng snapshot_cpu.lttng discard_memory.lttng \
	     live_memory.lttng snapshot_memory.lttng discard_network.lttng live_network.lttng \
	     snapshot_network.lttng discard_interrupt.lttng live_interrupt.lttng \
	     snapshot_interrupt.lttng discard_sched_latency.lttng live_sched_latency.lttng \
	     snapshot_sched_latency.lttng discard_syscall.lttng live_syscall.lttng \
	     snapshot_syscall.lttng discard_lttng_analyses.lttng
